--- a/.ci.yaml
+++ b/.ci.yaml
@@ -4176,6 +4176,7 @@ targets:
       - .ci.yaml
 
   - name: Windows run_debug_test_windows
+    bringup: true
     recipe: devicelab/devicelab_drone
     timeout: 60
     properties:
