--- a/.ci.yaml
+++ b/.ci.yaml
@@ -4541,7 +4541,7 @@ targets:
     properties:
       tags: >
         ["devicelab", "android", "windows"]
-      task_name: flavors_test_win
+      task_name: flavors_test
 
   - name: Windows_android flutter_gallery_win__compile
     recipe: devicelab/devicelab_drone
