--- a/.ci.yaml
+++ b/.ci.yaml
@@ -1690,6 +1690,7 @@ targets:
       task_name: fast_scroll_large_images__memory
 
   - name: Linux_android flavors_test
+    bringup: true
     recipe: devicelab/devicelab_drone
     presubmit: false
     timeout: 60
@@ -3375,6 +3376,7 @@ targets:
       task_name: route_test_ios
 
   - name: Mac_ios flavors_test_ios
+    bringup: true
     recipe: devicelab/devicelab_drone
     presubmit: false
     timeout: 60
