--- a/.ci.yaml
+++ b/.ci.yaml
@@ -3819,6 +3819,16 @@ targets:
         ["devicelab", "ios", "mac"]
       task_name: flutter_gallery_ios_sksl_warmup__transition_perf
 
+  - name: Mac_ios spell_check_test
+    bringup: true
+    recipe: devicelab/devicelab_drone
+    presubmit: true ## TESTING PURPOSES ONLY
+    timeout: 60
+    properties:
+      tags: >
+        ["devicelab", "ios", "mac"]
+      task_name: spell_check_test
+
   - name: Mac native_ui_tests_macos
     recipe: devicelab/devicelab_drone
     timeout: 60
