Use "bringup: true" for new entries

--- a/.ci.yaml
+++ b/.ci.yaml
@@ -3556,6 +3556,7 @@ targets:
   - name: Linux_pixel_7pro draw_arcs_all_fill_styles_perf__timeline_summary
     recipe: devicelab/devicelab_drone
     presubmit: false
+    bringup: true
     timeout: 60
     properties:
       tags: >
@@ -3565,6 +3566,7 @@ targets:
   - name: Mac_ios draw_arcs_all_fill_styles_perf_ios__timeline_summary
     recipe: devicelab/devicelab_drone
     presubmit: false
+    bringup: true
     timeout: 60
     properties:
       tags: >
@@ -3574,6 +3576,7 @@ targets:
   - name: Linux_pixel_7pro draw_arcs_all_stroke_styles_perf__timeline_summary
     recipe: devicelab/devicelab_drone
     presubmit: false
+    bringup: true
     timeout: 60
     properties:
       tags: >
@@ -3583,6 +3586,7 @@ targets:
   - name: Mac_ios draw_arcs_all_stroke_styles_perf_ios__timeline_summary
     recipe: devicelab/devicelab_drone
     presubmit: false
+    bringup: true
     timeout: 60
     properties:
       tags: >
