Add workflow permissions to files-changed.yml
Explicitly sets permissions for contents, pull-requests, and actions in the GitHub Actions workflow to improve security and clarify required access levels.

contents: read - Required for actions/checkout@v5 to clone the repository
pull-requests: read - Required to access github.event.pull_request.base.sha and other PR context
actions: write - Required for actions/upload-artifact@v5 to upload workflow artifacts

--- a/.github/workflows/files-changed.yml
+++ b/.github/workflows/files-changed.yml
@@ -10,6 +10,11 @@ on:
       - opened
       - synchronize
 
+permissions:
+  contents: read
+  pull-requests: read
+  actions: write
+
 jobs:
   generate-json:
     runs-on: ubuntu-latest
