Update workflow permissions in easy-cp.yml
Changed permissions from 'write-all' to more granular 'contents: read' and 'pull-requests: write' for improved security and least privilege in the GitHub Actions workflow.

The workflow uses FLUTTERACTIONSBOT_CP_TOKEN for all sensitive operations (removing labels, creating PRs, commenting), so the workflow's default GITHUB_TOKEN doesn't need extensive permissions

--- a/.github/workflows/easy-cp.yml
+++ b/.github/workflows/easy-cp.yml
@@ -9,7 +9,9 @@ on:
     branches: master
     types: [labeled]
 
-permissions: write-all
+permissions:
+  contents: read
+  pull-requests: write
 
 jobs:
   cherrypick_not_merged_remove_label:
