--- a/engine/src/flutter/impeller/entity/BUILD.gn
+++ b/engine/src/flutter/impeller/entity/BUILD.gn
@@ -74,7 +74,7 @@ impeller_shaders("entity_shaders") {
 impeller_shaders("modern_entity_shaders") {
   name = "modern"
 
-  # wasm only builds GLES3, which has a hard coded language version
+  # Wasm only builds GLES3, which has a hard coded language version.
   if (impeller_enable_opengles && !is_wasm) {
     gles_language_version = 460
   }
