--- a/packages/flutter_tools/test/widget_preview_scaffold.shard/widget_preview_scaffold/pubspec.yaml
+++ b/packages/flutter_tools/test/widget_preview_scaffold.shard/widget_preview_scaffold/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   leak_tracker_testing: 3.0.2
   lints: 6.0.0
   matcher: 0.12.17
-  material_color_utilities: 0.11.1
+  material_color_utilities: 0.13.0
   meta: 1.17.0
   plugin_platform_interface: 2.1.8
   source_span: 1.10.1
@@ -66,4 +66,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-# PUBSPEC CHECKSUM: 4ll2b8
+# PUBSPEC CHECKSUM: 9jn7l6
