--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -130,7 +130,7 @@ dependencies:
   leak_tracker_testing: 3.0.2
   logging: 1.3.0
   matcher: 0.12.17
-  material_color_utilities: 0.11.1
+  material_color_utilities: 0.13.0
   meta: 1.17.0
   metrics_center: 1.0.13
   mime: 2.0.0
@@ -213,4 +213,4 @@ dependencies:
   pedantic: 1.11.1
   quiver: 3.2.2
   yaml_edit: 2.2.2
-# PUBSPEC CHECKSUM: 7a0cf6
+# PUBSPEC CHECKSUM: neigfe
