--- a/examples/api/analysis_options.yaml
+++ b/examples/api/analysis_options.yaml
@@ -1,6 +1,6 @@
 # This file is also used by dev/bots/analyze_snippet_code.dart to analyze code snippets (`{@tool snippet}` sections).
 
-include: ../../analysis_options.yaml
+include: ../../analysis_options.yaml #TODO(Piinks): Replace with flutter_lints after pub roll.
 
 linter:
   rules:
