--- a/examples/api/analysis_options.yaml
+++ b/examples/api/analysis_options.yaml
@@ -1,11 +1,8 @@
 # This file is also used by dev/bots/analyze_snippet_code.dart to analyze code snippets (`{@tool snippet}` sections).
 
-# include: ../../analysis_options.yaml #TODO(Piinks): Replace with flutter_lints - separate change.
-
-analyzer:
-  errors:
-    # We have some clean up to do here. Landing examples/api update separately.
-    deprecated_member_use: ignore
+# The following line activates a set of recommended lints for Flutter apps,
+# packages, and plugins designed to encourage good coding practices.
+include: package:flutter_lints/flutter.yaml
 
 linter:
   rules:
