--- a/engine/src/flutter/display_list/BUILD.gn
+++ b/engine/src/flutter/display_list/BUILD.gn
@@ -110,6 +110,8 @@ source_set("display_list") {
     "effects/image_filters/dl_blur_image_filter.h",
     "effects/image_filters/dl_color_filter_image_filter.cc",
     "effects/image_filters/dl_color_filter_image_filter.h",
+    "effects/image_filters/dl_combine_image_filter.cc",
+    "effects/image_filters/dl_combine_image_filter.h",
     "effects/image_filters/dl_compose_image_filter.cc",
     "effects/image_filters/dl_compose_image_filter.h",
     "effects/image_filters/dl_dilate_image_filter.cc",
