--- a/engine/src/flutter/impeller/tools/shaders_vk.gni
+++ b/engine/src/flutter/impeller/tools/shaders_vk.gni
@@ -35,6 +35,10 @@ template("impeller_shaders_vk") {
     shader_target_flags = [ "--vulkan" ]
 
     defines = [ "IMPELLER_TARGET_VULKAN" ]
+
+    if (defined(invoker.entry_point_prefix)) {
+      entry_point_prefix = invoker.entry_point_prefix
+    }
   }
 
   vk_shaders =
