--- a/engine/src/flutter/impeller/tools/shaders_gles.gni
+++ b/engine/src/flutter/impeller/tools/shaders_gles.gni
@@ -51,6 +51,10 @@ template("impeller_shaders_gles") {
     if (is_300) {
       defines += [ "IMPELLER_TARGET_OPENGLES3" ]
     }
+
+    if (defined(invoker.entry_point_prefix)) {
+      entry_point_prefix = invoker.entry_point_prefix
+    }
   }
 
   gles_shaders =
