--- a/engine/src/flutter/impeller/tools/shaders_vk.gni
+++ b/engine/src/flutter/impeller/tools/shaders_vk.gni
@@ -59,6 +59,9 @@ template("impeller_shaders_vk") {
   shader_archive(vk_lib) {
     shaders = vk_shaders
     deps = [ ":$impellerc_vk" ]
+    if (defined(invoker.entry_point_prefix)) {
+      entry_point_prefix = invoker.entry_point_prefix
+    }
   }
 
   reflect_vk = "reflect_$target_name"
