--- a/engine/src/flutter/impeller/fixtures/BUILD.gn
+++ b/engine/src/flutter/impeller/fixtures/BUILD.gn
@@ -138,6 +138,7 @@ test_fixtures("file_fixtures") {
     "sample.vert",
     "check_gles_definition.frag",
     "sample_with_binding.vert",
+    "sample_with_uniforms.frag",
     "simple.vert.hlsl",
     "sa%m#ple.vert",
     "stage1.comp",
