--- a/engine/src/flutter/testing/BUILD.gn
+++ b/engine/src/flutter/testing/BUILD.gn
@@ -16,6 +16,7 @@ source_set("testing_lib") {
   testonly = true
 
   sources = [
+    "assert_ok.h",
     "assertions.h",
     "debugger_detection.cc",
     "debugger_detection.h",
