--- a/engine/src/flutter/impeller/tools/shaders_gles.gni
+++ b/engine/src/flutter/impeller/tools/shaders_gles.gni
@@ -75,6 +75,9 @@ template("impeller_shaders_gles") {
   shader_archive(gles_lib) {
     shaders = gles_shaders
     deps = [ ":$impellerc_gles" ]
+    if (defined(invoker.entry_point_prefix)) {
+      entry_point_prefix = invoker.entry_point_prefix
+    }
   }
 
   reflect_gles = "reflect_$target_name"
