--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,10 +5,5 @@
     "githubPullRequests.ignoredPullRequestBranches": [
         "master"
     ],
-    "files.trimTrailingWhitespace": true,
-    "files.associations": {
-      "any": "cpp",
-      "*.inc": "cpp",
-      "*.hpp11": "cpp"
-    }
+    "files.trimTrailingWhitespace": true
 }
