--- a/.ci.yaml
+++ b/.ci.yaml
@@ -4735,6 +4735,7 @@ targets:
 
   # mac mokey test
   - name: Mac_arm64_mokey entrypoint_dart_registrant
+    bringup: true # Flakey https://github.com/flutter/flutter/issues/179514
     recipe: devicelab/devicelab_drone
     presubmit: false
     timeout: 60
@@ -4823,6 +4824,7 @@ targets:
 
   # mac mokey test
   - name: Mac_arm64_mokey native_assets_android
+    bringup: true # Flakey https://github.com/flutter/flutter/issues/179514
     recipe: devicelab/devicelab_drone
     presubmit: false
     timeout: 60
