--- a/engine/src/flutter/impeller/entity/BUILD.gn
+++ b/engine/src/flutter/impeller/entity/BUILD.gn
@@ -278,6 +278,7 @@ impeller_component("entity_unittests") {
     "contents/line_contents_unittests.cc",
     "contents/text_contents_unittests.cc",
     "contents/tiled_texture_contents_unittests.cc",
+    "contents/runtime_effect_contents_unittests.cc",
     "draw_order_resolver_unittests.cc",
     "entity_pass_target_unittests.cc",
     "entity_playground.cc",
