[ Analysis ] Added initial implementation of the `flutter_analyzer_plugin` (#175679)
The `flutter_analyzer_plugin` implements rules previously enforced by
the `dev/bots/analyze.dart` check run on the CI, allowing for earlier
detection of custom lint violations before a change is uploaded for
review.

Currently, the plugin implements the following rules:

  - avoid_future_catch_error
  - no_double_clamp
  - no_stopwatches
  - protect_public_state_subtypes
  - render_box_intrinsics

Towards https://github.com/flutter/flutter/issues/175276

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -13,6 +13,16 @@
 # This file contains the analysis options used for code in the flutter/flutter
 # repository.
 
+plugins:
+  flutter_analyzer_plugin:
+    path: dev/flutter_analyzer_plugin
+    diagnostics:
+      avoid_future_catch_error: false
+      no_double_clamp: false
+      no_stopwatches: false
+      protect_public_state_subtypes: false
+      render_box_intrinsics: false
+
 analyzer:
   language:
     strict-casts: true
@@ -24,6 +34,7 @@ analyzer:
     # something (https://github.com/flutter/flutter/issues/143312)
     deprecated_member_use: ignore
     deprecated_member_use_from_same_package: ignore
+    plugins_in_inner_options: ignore
   exclude:
     - "bin/cache/**"
       # Ignore protoc generated files
