--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ environment:
 
 workspace:
   - dev/a11y_assessments
+  - dev/flutter_analyzer_plugin
   - dev/automated_tests
   - dev/benchmarks/complex_layout
   - dev/benchmarks/imitation_game_flutter
