--- a/.ci.yaml
+++ b/.ci.yaml
@@ -166,11 +166,11 @@ platform_properties:
         [
           {"dependency": "apple_signing", "version": "version:to_2026"}
         ]
-      os: Mac-15.5|Mac-15.7
+      os: Mac-15.7
       device_type: none
       $flutter/osx_sdk : >-
         {
-          "sdk_version": "16c5032a"
+          "sdk_version": "17a400"
         }
 
   mac_arm64:
@@ -183,12 +183,12 @@ platform_properties:
         [
           {"dependency": "apple_signing", "version": "version:to_2026"}
         ]
-      os: Mac-15.5|Mac-15.7
+      os: Mac-15.7
       device_type: none
       cpu: arm64
       $flutter/osx_sdk : >-
         {
-          "sdk_version": "16c5032a"
+          "sdk_version": "17a400"
         }
 
   mac_benchmark:
@@ -203,12 +203,12 @@ platform_properties:
         ]
       device_type: none
       mac_model: "Macmini8,1"
-      os: Mac-15.5|Mac-15.7
+      os: Mac-15.7
       tags: >
         ["devicelab", "hostonly", "mac"]
       $flutter/osx_sdk : >-
         {
-          "sdk_version": "16c5032a"
+          "sdk_version": "17a400"
         }
 
   mac_x64:
@@ -221,12 +221,12 @@ platform_properties:
         [
           {"dependency": "apple_signing", "version": "version:to_2026"}
         ]
-      os: Mac-15.5|Mac-15.7
+      os: Mac-15.7
       device_type: none
       cpu: x86
       $flutter/osx_sdk : >-
         {
-          "sdk_version": "16c5032a"
+          "sdk_version": "17a400"
         }
 
   mac_build_test:
@@ -240,12 +240,12 @@ platform_properties:
           {"dependency": "ruby", "version": "ruby_3.1-pod_1.13"},
           {"dependency": "apple_signing", "version": "version:to_2026"}
         ]
-      os: Mac-15.5|Mac-15.7
+      os: Mac-15.7
       device_type: none
       cpu: x86
       $flutter/osx_sdk : >-
         {
-          "sdk_version": "16c5032a"
+          "sdk_version": "17a400"
         }
 
   mac_mokey:
@@ -256,7 +256,7 @@ platform_properties:
           {"dependency": "chrome_and_driver", "version": "version:125.0.6422.141"},
           {"dependency": "open_jdk", "version": "version:21"}
         ]
-      os: Mac-15.1|Mac-15.5|Mac-15.6|Mac-15.7
+      os: Mac-15.7
       cpu: x86
       device_type: "mokey"
 
@@ -267,7 +267,7 @@ platform_properties:
           {"dependency": "android_sdk", "version": "version:36v4"},
           {"dependency": "open_jdk", "version": "version:21"}
         ]
-      os: Mac-15.1|Mac-15.5|Mac-15.6|Mac-15.7
+      os: Mac-15.7
       cpu: arm64
       device_type: "mokey"
 
@@ -282,11 +282,11 @@ platform_properties:
           {"dependency": "ruby", "version": "ruby_3.1-pod_1.13"},
           {"dependency": "apple_signing", "version": "version:to_2026"}
         ]
-      os: Mac-15.1|Mac-15.5|Mac-15.6|Mac-15.7
+      os: Mac-15.7
       device_os: iOS-18
       $flutter/osx_sdk : >-
         {
-          "sdk_version": "16c5032a"
+          "sdk_version": "17a400"
         }
 
   mac_x64_ios:
@@ -300,12 +300,12 @@ platform_properties:
           {"dependency": "ruby", "version": "ruby_3.1-pod_1.13"},
           {"dependency": "apple_signing", "version": "version:to_2026"}
         ]
-      os: Mac-15.1|Mac-15.5|Mac-15.6|Mac-15.7
+      os: Mac-15.7
       cpu: x86
       device_os: iOS-18
       $flutter/osx_sdk : >-
         {
-          "sdk_version": "16c5032a"
+          "sdk_version": "17a400"
         }
 
   mac_arm64_ios:
@@ -319,12 +319,12 @@ platform_properties:
           {"dependency": "ruby", "version": "ruby_3.1-pod_1.13"},
           {"dependency": "apple_signing", "version": "none"}
         ]
-      os: Mac-15.1|Mac-15.5|Mac-15.6|Mac-15.7
+      os: Mac-15.7
       cpu: arm64
       device_os: iOS-18
       $flutter/osx_sdk : >-
         {
-          "sdk_version": "16c5032a"
+          "sdk_version": "17a400"
         }
 
   windows:
@@ -5450,7 +5450,7 @@ targets:
       tags: >
         ["devicelab", "ios", "mac"]
       task_name: ios_debug_workflow
-      os: Mac-15.5|Mac-15.7
+      os: Mac-15.7
       $flutter/osx_sdk : >-
         {
           "sdk_version": "17a5295f"
