--- a/packages/flutter_tools/test/widget_preview_scaffold.shard/widget_preview_scaffold/pubspec.yaml
+++ b/packages/flutter_tools/test/widget_preview_scaffold.shard/widget_preview_scaffold/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   term_glyph: 1.2.2
   test_api: 0.7.8
   typed_data: 1.4.0
-  unified_analytics: 8.0.5
+  unified_analytics: 8.0.10
   url_launcher_android: 6.3.28
   url_launcher_ios: 6.3.6
   url_launcher_linux: 3.2.2
@@ -68,4 +68,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-# PUBSPEC CHECKSUM: fs4vp2
+# PUBSPEC CHECKSUM: oj1rro
