fix stderr by matching ndk version

--- a/dev/integration_tests/ui/android/app/build.gradle
+++ b/dev/integration_tests/ui/android/app/build.gradle
@@ -11,6 +11,7 @@ plugins {
 android {
     namespace = "com.yourcompany.integration_ui"
     compileSdk = flutter.compileSdkVersion
+    ndkVersion = flutter.ndkVersion
 
 
     compileOptions {
