--- a/engine/src/flutter/.ci.yaml
+++ b/engine/src/flutter/.ci.yaml
@@ -33,7 +33,7 @@ platform_properties:
       os: Mac-15.7
       $flutter/osx_sdk : >-
         {
-          "sdk_version": "17a400"
+          "sdk_version": "17c52"
         }
   windows:
     properties:
@@ -466,7 +466,7 @@ targets:
         ]
       $flutter/osx_sdk : >-
         {
-          "sdk_version": "17a400"
+          "sdk_version": "17c52"
         }
     # Do not remove(https://github.com/flutter/flutter/issues/144644)
     # Scheduler will fail to get the platform
@@ -495,13 +495,13 @@ targets:
       config_name: mac_ios_engine
       $flutter/osx_sdk : >-
         {
-          "sdk_version": "17a400"
+          "sdk_version": "17c52"
         }
     # Do not remove(https://github.com/flutter/flutter/issues/144644)
     # Scheduler will fail to get the platform
     drone_dimensions:
       - os=Mac-15.7
-      - cpu=x86
+      - cpu=arm64
 
   - name: Mac mac_ios_engine_ddm
     recipe: engine_v2/engine_v2
@@ -515,13 +515,13 @@ targets:
       config_name: mac_ios_engine_ddm
       $flutter/osx_sdk : >-
         {
-          "sdk_version": "17a400"
+          "sdk_version": "17c52"
         }
     # Do not remove(https://github.com/flutter/flutter/issues/144644)
     # Scheduler will fail to get the platform
     drone_dimensions:
       - os=Mac-15.7
-      - cpu=x86
+      - cpu=arm64
 
   - name: Linux windows_android_aot_engine
     recipe: engine_v2/engine_v2
