--- a/.ci.yaml
+++ b/.ci.yaml
@@ -5492,7 +5492,7 @@ targets:
         ["devicelab", "ios", "mac"]
       task_name: flutter_gallery__transition_perf_e2e_ios
       drone_dimensions: >
-        ["device_os=iOS-26-2","os=Mac-15.1|Mac-15.5|Mac-15.6|Mac-15.7", "cpu=arm64"]
+        ["device_os=iOS-26-2","Mac-15.7", "cpu=arm64"]
 
   - name: Mac_ios animated_blur_backdrop_filter_perf_ios__timeline_summary
     recipe: devicelab/devicelab_drone
