--- a/engine/src/flutter/.ci.yaml
+++ b/engine/src/flutter/.ci.yaml
@@ -209,6 +209,19 @@ targets:
       # at https://github.com/flutter/flutter/issues/152186.
       cores: "8"
 
+  - name: Linux linux_arm_host_desktop_engine
+    recipe: engine_v2/engine_v2
+    timeout: 120
+    bringup: true
+    properties:
+      add_recipes_cq: "true"
+      release_build: "true"
+      config_name: linux_arm_host_desktop_engine
+    drone_dimensions:
+      - os=Linux
+    dimensions:
+      cores: "8"
+
   - name: Linux linux_host_engine
     recipe: engine_v2/engine_v2
     timeout: 120
