--- a/packages/flutter_tools/pubspec.yaml
+++ b/packages/flutter_tools/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   ffi: 2.1.4
   file: 7.0.1
   flutter_template_images: 5.0.0
+  font_asset: 0.0.4
   html: 0.15.6
   http: 1.6.0
   intl: 0.20.2
