--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,9 +78,9 @@ workspace:
 
 dependencies:
   _discoveryapis_commons: 1.0.7
-  _fe_analyzer_shared: 89.0.0
+  _fe_analyzer_shared: 92.0.0
   adaptive_breakpoints: 0.1.7
-  analyzer: 8.2.0
+  analyzer: 9.0.0
   animations: 2.1.1
   archive: 3.6.1
   args: 2.7.0
@@ -112,8 +112,8 @@ dependencies:
   google_fonts: 6.3.3
   google_identity_services_web: 0.3.3+1
   google_mobile_ads: 5.1.0
-  googleapis: 12.0.0
-  googleapis_auth: 1.6.0
+  googleapis: 14.0.0
+  googleapis_auth: 2.0.0
   hooks: 1.0.0
   html: 0.15.6
   http: 1.6.0
@@ -131,7 +131,7 @@ dependencies:
   matcher: 0.12.18
   material_color_utilities: 0.13.0
   meta: 1.17.0
-  metrics_center: 1.0.13
+  metrics_center: 1.0.14
   mime: 2.0.0
   native_toolchain_c: 0.17.4
   nested: 1.0.0
@@ -144,7 +144,7 @@ dependencies:
   path_provider_linux: 2.2.1
   path_provider_platform_interface: 2.1.2
   path_provider_windows: 2.3.0
-  petitparser: 6.1.0
+  petitparser: 7.0.1
   platform: 3.1.6
   plugin_platform_interface: 2.1.8
   pool: 1.5.2
@@ -159,7 +159,7 @@ dependencies:
   shelf: 1.4.2
   shelf_packages_handler: 3.0.2
   shelf_static: 1.1.3
-  shelf_web_socket: 2.0.1
+  shelf_web_socket: 3.0.0
   shrine_images: 2.0.2
   source_map_stack_trace: 2.1.2
   source_maps: 0.10.13
@@ -201,7 +201,7 @@ dependencies:
   webview_flutter_platform_interface: 2.14.0
   webview_flutter_wkwebview: 3.23.5
   xdg_directories: 1.1.0
-  xml: 6.5.0
+  xml: 6.6.1
   yaml: 3.1.3
   cli_util: 0.4.2
   dart_style: 3.1.3
@@ -212,4 +212,4 @@ dependencies:
   pedantic: 1.11.1
   quiver: 3.2.2
   yaml_edit: 2.2.3
-# PUBSPEC CHECKSUM: r0b6tb
+# PUBSPEC CHECKSUM: unhors
